--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         uses: Platane/snk@v3.0.0
 
         with:
-          github_user_name: ${{ github.ALeglessSpider }}
+          github_user_name: ${{ ALeglessSpider }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
